# StarryOS

./: .gitignore  Makefile  README.md
api/: Cargo.toml
api/src/: task.rs
api/src/syscall/: mod.rs
docs/: musl-toolchain-build.md  musl-toolchain-quickstart.md
scripts/: build-musl-toolchain.sh  check-deps-macos.sh
